# rag-mcp

./: .env.example  .gitignore  README.md  credit-report.json  mcp_server.py  pyproject.toml  rag.py  requirements.txt  server_status.json  start_ollama.sh
data/: risc0-docs-compiled.md
storage/: default__vector_store.json  docstore.json  index_store.json
